# claude-linkedin-optimizer

./: README.md  pyproject.toml  requirements.txt  server.py
docs/: DECISIONS.md
mcpb/: README.md  build.mjs  manifest.json  package-lock.json  package.json  smoketest.mjs
mcpb/src/: index.ts
prompts/: content_plan.md  design_featured_skills.md  diagnostic.md  rewrite_experience.md  rewrite_headline_about.md
resources/: keyword_taxonomy.txt
scripts/: install-desktop.ps1  install-desktop.sh  install.ps1  install.sh
