[project]
name = "linkedin-optimizer-mcp"
version = "0.1.0"
description = "An MCP server that turns expert recruiter prompts into a one-command LinkedIn profile optimizer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
]

[project.scripts]
linkedin-optimizer = "server:mcp.run"
